--- a/2019-msds603-example/Week1/driving_time_example/calculate_driving_time.ipynb
+++ b/2019-msds603-example/Week1/driving_time_example/calculate_driving_time.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
     "dest_coord = '37.7765,-122.4506'\n",
     "output_file_name = 'output.txt'\n",
     "# https://developers.google.com/maps/documentation/javascript/get-api-key\n",
-    "apikey = 'AIzaSyCTWPyWsLgoMH6w_1iEf161paxhTiK1dNk'"
+    "apikey = 'AIzaSyCkHWOkKuAY-iUcPgJM87r4S8ydImeTro8'"
    ]
   },
   {
@@ -42,9 +42,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'destination_addresses': ['University Center, San Francisco, CA 94117, USA'],\n",
+       " 'origin_addresses': ['208 Spear St, San Francisco, CA 94105, USA'],\n",
+       " 'rows': [{'elements': [{'distance': {'text': '6.5 km', 'value': 6471},\n",
+       "     'duration': {'text': '24 mins', 'value': 1425},\n",
+       "     'duration_in_traffic': {'text': '28 mins', 'value': 1676},\n",
+       "     'status': 'OK'}]}],\n",
+       " 'status': 'OK'}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "output_file = open(output_file_name, \"a\")\n",
     "url = \"https://maps.googleapis.com/maps/api/distancematrix/json?key={0}&origins={1}&destinations={2}&mode=driving&departure_time=now&language=en-EN&sensor=false\".format(\n",
@@ -55,9 +72,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'28 mins'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "driving_time = result['rows'][0]['elements'][0]['duration_in_traffic']['text']\n",
     "driving_time"
@@ -72,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.1"
   },
   "varInspector": {
    "cols": {
